js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-do-while-no-new-call-expression.js
DONOTEVALUATE
(
)
;
do
{
new
import
(
'
'
)
;
}
while
(
false
)
;
